# yuanshenjian-cn

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CNAME  PROJECT_ANALYSIS.md  README.md  eslint.config.mjs  justfile  next.config.ts  opencode.jsonc  package-lock.json  package.json  pyrightconfig.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: error.tsx  (+6 more)
core-service/: .env.development  .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  render.example.yaml  requirements.txt
core-service/app/: config.yml  main.py
core-service/app/shared/: config.py  rate_limit.py  security.py
core-service/config/: app.yaml
core-service/config/ai/: llm-profiles.example.jsonc  scene-profile-map.jsonc  supported-llm-providers.json
core-service/migrations/: env.py
core-service/migrations/versions/: 0001_initial.py  2384254920d7_rebuild_daily_budget_usage_and_drop_.py  6f2a9c7e1d34_add_knowledge_term_references.py  905477abc8ab_add_knowledge_terms_table.py  9ad634c7ec9e_contextual_ai_advisor_knowledge_base.py  (+1 more)
core-service/tests/: conftest.py  test_admin_api.py  test_admin_console_query_service.py  test_ai_budget.py  test_ai_gateway.py  test_analytics.py  test_app_config.py  test_comment_integration.py  test_comments.py  test_contextual_advisor.py  test_contextual_advisor_prompt.py  test_health.py  test_knowledge_term.py  test_llm_provider_factory.py  test_models.py  test_rag.py  test_rate_limit_integration.py  test_request_identity.py  test_security.py  test_short_window_rate_limiter.py
(+1648 files in other folders)
