[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "bleach>=6.1.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "markdown-it-py>=3.0.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "pyyaml>=6.0.2",
  "python-frontmatter>=1.1.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "types-bleach>=6.2.0",
  "types-PyYAML>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["app/db/migrations/versions/*.py"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages.find]
include = ["app*"]
